assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@300&family=Play&family=Poppins:wght@100;200;300&family=Shadows+Into+Light&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html, body {
    height: 100%;
    margin: 0;
    justify-content: center;
    align-items: center;
    background: linear-gradient(
        90deg, 
        rgba(115, 61, 168, 1) 0%, 
        rgba(114, 90, 219, 1) 100%);
}

h1 {
    font-family: 'Play', sans-serif;
    text-align: center;
    padding-top: 20px;
    color: aquamarine;
}

.table {
    display: grid;
    width: 100%;
    height: 100%;
    justify-content: center;
    align-content: center;
    justify-items: center;
    align-items: center;
    grid-template-columns: repeat(3, auto);
}

.table.x .cell:not(.x):not(.circle):hover::after,
.table.x .cell:not(.x):not(.circle):hover::before,
.table.circle .cell:not(.x):not(.circle):hover::after,
.table.circle .cell:not(.x):not(.circle):hover::before {
    background: rgba(127, 255, 212, 0.426) !important;
}

/* stylizing class cell */

.cell {
    width: 100px;
    height: 100px;
    border: 2px solid white;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
}

.cell:nth-child(-n+3) {
    border-top: none;
}

.cell:nth-child(3n+1) {
    border-left: none;
}

.cell:nth-child(n+7) {
    border-bottom: none;
}

.cell:nth-child(3n) {
    border-right: none;
}

.cel.x, .cell.circle {
    cursor: not-allowed;
}

/* X stylizing*/

.cell.x::before, .cell.x::after,
.table.x .cell:not(.x):not(.circle):hover::after,
.table.x .cell:not(.x):not(.circle):hover::before {
    content: "";
    height: calc(100px * 0.10);
    width: calc(100px * 0.80);
    background-color: aquamarine;
    position: absolute;
}

.cell.x::before,
.table.x .cell:not(.x):not(.circle):hover::before {
    transform: rotate(45deg);
}

.cell.x::after,
.table.x .cell:not(.x):not(.circle):hover::after {

    transform: rotate(-45deg);
}

/* circle stylizing*/

.cell.circle::before, .cell.circle::after,
.table.circle .cell:not(.x):not(.circle):hover::after,
.table.circle .cell:not(.x):not(.circle):hover::before {
    content: "";
    height: calc(100px * 0.80);
    width: calc(100px * 0.80);
    background-color: aquamarine;
    position: absolute;
    border-radius: 50%;
}

/* winner msg */

.winning-msg {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    justify-content: center;
    align-items: center;
    background-color: rgba(0, 0, 0, 0.8);
    flex-direction: column;
}

.btn {
    font-family: 'Play', sans-serif;
    font-size: 2rem;
    background-color: aquamarine;
    padding: 10px 15px;
    cursor: pointer;
    border-radius: 4px;
    border: none;
    margin-top: 15px;
    color: rgba(115, 61, 168, 1);
}

.btn:hover {
    color: rgba(115, 61, 168, 1);
    background-color: white;
}

.victory-msg {
    color: white;
    font-size: 3rem;
}

.display-victory {
    font-family: 'Play', sans-serif;
    display: flex;
}

